--- a/style.css
+++ b/style.css
@@ -1,96 +1,6 @@
 body{
     font-family: 'Courier New', Courier, monospace;
-    text-align: center;
-    height: auto;
-    width: 800px;
-    height: auto;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: #ffffff;
 }
-.text
-{
-    width: 800px;
-    height: 120px;
-    margin-bottom: 5px;
-    background-color: #e65c00;
-    border: 2px solid #660066;
-    color: ivory;
-    font-weight: bold;
-}
-.messagePanel 
-{
-    width: 400px;
-    height: 50px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding: 15px;
-    text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-    font-weight: bold;
-}
-.para
-{
-    width: 20%;
-    height: 20%;
-    text-align: center;
-    margin-left: 200px;
-    float: left;
-    font-weight: bold;
-    
-}
-.input1
-{
-    width: 25%;
-    height: auto;
-    margin-left: 20px;
-    margin-top: 5px;
-    padding: 5px;
-    float: left;
-    
-}
-.input2
-{
-    width: 25%;
-    height: auto;
-    margin-left: 20px;
-    margin-top: 5px;
-    padding: 5px;
-    float: left;
-}
-.buttonDiv
-{
-    width: 300px;
-    height: 50px;
-    margin-top: 120px;
-    margin-bottom: 5px;
-    text-align: center;
-    padding: 5px;
-    margin-right: auto;
-    margin-left: auto;
-}
-button
-{
-    width: 250px;
-    height: 50px;
-    background-color: #e65c00;
-    border: 2px solid #660066;
-    color: ivory;
-    font-weight: bold;
-}
-.footerDiv
-{
-    width: 800px;
-    height: 25px;
-    margin-bottom: 5px;
-    background-color: #e65c00;
-    border: 2px solid #660066;
-    color: ivory;
-    text-align: right;
-}
-.paraFooter
-{
-   margin-top: auto;
-   padding: 5px;
+.class_title_font{
+    font-family: 'Martel', serif;
 }
